Better check of whether a terminal is available before to propose to download EPSG data. This is needed for avoiding undesired prompts during CI builds.